--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Jadłospis posiłków</title>
-</head>
-<body>
-    <h1>Jadłospis posiłków</h1>
-    <h3>Wystąpił błąd : <span th:text="${message}"/></h3>
-</body>
-</html>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Jadłospis posiłków</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<div th:replace="fragments/navigtion :: navigation"/>-->
+
+<!--    <h1>Jadłospis posiłków</h1>-->
+<!--    <h3>Wystąpił błąd : <span th:text="${message}"/></h3>-->
+<!--<div th:replace="fragments/navigtion :: footer"/>-->
+
+<!--</body>-->
+<!--</html>-->
