--- a/src/main/resources/templates/meals.html
+++ b/src/main/resources/templates/meals.html
@@ -15,6 +15,7 @@
     </style>
 </head>
 <body>
+<div th:replace="fragments/navigation :: navigation"/>
 
 
 <a th:href="@{/mvc/meal/add}">Dodaj nowy posiłek</a>
@@ -56,6 +57,7 @@
 
         </tbody>
     </table>
+<div th:replace="fragments/navigation :: footer"/>
 
 </body>
 </html>
